# CodesynthesisXML

./: README.md  conanfile.py
CodesynthesisXML/: CMakeLists.txt
CodesynthesisXML/config/: hello.xml  hello.xsd
CodesynthesisXML/src/: main.cpp
